syntax = "proto3";

package wres.statistics.generated;

import "wresproto/duration_diagram_metric.proto";
import "wresproto/reference_time.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "DurationDiagramStatisticProto";
option java_multiple_files = true;

message DurationDiagramStatistic
{
    /*A message that encapsulates a duration diagram statistic, which contains a 
    sequence of durations, each one referenced to an instant.*/

    DurationDiagramMetric metric = 1;
    // The duration diagram metric.
    
    repeated PairOfInstantAndDuration statistics = 2;
    // The pairs of instants and durations that compose the diagram.
    
    message PairOfInstantAndDuration 
    {
        // A pair of one instant and one duration.
        
        google.protobuf.Timestamp time = 1;
        // The reference time.

        google.protobuf.Duration duration = 2;
        // The duration.

        ReferenceTime.ReferenceTimeType reference_time_type = 3;
        // The reference time type.
    }
}